--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -79,6 +79,9 @@ For Extra-large size device: 1200px and more */
 .slick-prev.slick-arrow {
 	left: 97%;
 }
+.teamLeader_icon {
+	left: 15%;
+}
 }
 /* =======================================================Device 1400 to 1620 End============= */
 
